@@ -6,6 +6,7 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.CrossOrigin;
 
 import edu.esi.ds.esientradas.services.BusquedaService;
 import edu.esi.ds.esientradas.dao.EntradaDao;
@@ -15,9 +16,11 @@ import edu.esi.ds.esientradas.model.Escenario;
 import edu.esi.ds.esientradas.model.Espectaculo;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/busqueda")
+@CrossOrigin(origins = "*")
 public class BusquedaController {
 
     @Autowired
@@ -36,19 +39,18 @@ public class BusquedaController {
         return this.service.getEscenarios(); 
     }
     
-
     @GetMapping("/getEspectaculos")
-    public List<DtoEspectaculo> getEspectaculos(@RequestParam String artista){
-        List <Espectaculo> espectaculos = this.service.getEspectaculos(artista);
-        List<DtoEspectaculo> espectaculosDto = espectaculos.stream().map(e -> {
+    public List<DtoEspectaculo> getEspectaculos(@RequestParam Long idEscenario){
+        List<Espectaculo> espectaculos = this.service.getEspectaculos(idEscenario);
+
+        return espectaculos.stream().map(e -> {
             DtoEspectaculo dto = new DtoEspectaculo();
             dto.setId(e.getId());
             dto.setArtista(e.getArtista());
             dto.setFecha(e.getFecha());
             dto.setEscenario(e.getEscenario().getNombre());
             return dto;
-        }).toList();
-    return espectaculosDto;
+        }).collect(Collectors.toList());
     }
 
     
